--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  font-family: "Poppins", sans-serif;
+  line-height: 1.7;
+}
+
 @keyframes glowAnimation {
   0% {
     text-shadow:
